--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="E:/dl/crawler4j-4.1-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="E:/dl/slf4j-simple-1.6.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="E:/dl/slf4j-simple-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/dl/javacsv.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
